# UUID-API

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
src/: main.rs
