[package]
name = "uuid_api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
sha2 = "0.10.8"
uuid = { version = "1.0", features = ["v4"] }
